--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=Dysv17f
+name=DYPlayer
 version=1.0.0
 author=Chris Snijder
 maintainer=Chris Snijder
-sentence=Abstracton for dysv17f mp3 player module over UART.
+sentence=Abstracton for DY-XXXX mp3 player modules over UART.
 paragraph=Most features abstracted to class easy to use methods.
 category=Device Control
 url=https://github.com/SnijderC/Dysv17f
-architectures=avr,arm,espressif
-includes=Dysv17f.h
+architectures=*
+includes=DYPlayerArduino.h
