Working playing of sound on ESP32 boards, receiving data not yet tested.

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,14 +2,15 @@
 description = Abstracton for DY-XXXX mp3 player modules over UART.
 src_dir = examples
 lib_dir = src
+framework = arduino, espidf
 
 [env]
 ; Serial Monitor options, you can listen in on the communication by connecting
 ; the TX of the module to the RX of a computer UART port (e.g. an fdti adapter).
-monitor_speed = 9600
-monitor_flags =
-    --encoding
-    hexlify
+; monitor_speed = 9600
+; monitor_flags =
+;     --encoding
+;     hexlify
 src_filter = +<*> -<esp32/>
 
 [env:pro16MHzatmega328]
