--- a/platformio.ini
+++ b/platformio.ini
@@ -2,6 +2,7 @@
 description = Abstracton for DY-XXXX mp3 player modules over UART.
 src_dir = examples
 lib_dir = src
+platform_packages = toolchain-atmelavr, framework-espidf, framework-arduinoespressif32, framework-arduinoespressif8266
 framework = arduino, espidf
 
 [env]
@@ -13,28 +14,31 @@ framework = arduino, espidf
 ;     hexlify
 src_filter = +<*> -<esp32/>
 
+[env:nodemcu-32s-esp-idf]
+platform = espressif32
+platform_packages = framework-espidf
+framework = espidf
+board = nodemcu-32s
+src_filter = +<esp32/>
+
 [env:pro16MHzatmega328]
 platform = atmelavr
 board = pro16MHzatmega328
 framework = arduino
 
-[env:nodemcu-32s-esp-idf]
-platform = espressif32
-framework = espidf
-board = nodemcu-32s
-src_filter = +<esp32/>
-
-[env:nodemcu-arduino]
-platform = espressif8266
-framework = arduino
-board = nodemcu
-
-[env:nodemcu-32s-arduino]
-platform = espressif32
-framework = arduino
-board = nodemcu-32s
-
 [env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
+
+[env:nodemcu-32s-arduino]
+platform = espressif32
+platform_packages = framework-arduinoespressif32
+framework = arduino
+board = nodemcu-32s
+
+[env:nodemcu-arduino]
+platform = espressif8266
+platform_packages = framework-arduinoespressif8266
+framework = arduino
+board = nodemcu
