Remove prefixes in favour of namespacing, better error reporting. Better documentation

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,14 @@ framework = arduino, espidf
 ; monitor_flags =
 ;     --encoding
 ;     hexlify
+monitor_speed = 115200
 src_filter = +<*> -<esp32/>
 
-[env:nodemcu-32s-esp-idf]
+[env:ttgo]
 platform = espressif32
 platform_packages = framework-espidf
 framework = espidf
-board = nodemcu-32s
+board = ttgo-t1
 src_filter = +<esp32/>
 
 [env:pro16MHzatmega328]
