Upload sketches faster

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ platform_packages = framework-espidf
 framework = espidf
 board = ttgo-t1
 src_filter = +<esp32/>
+upload_speed = 912600
 
 [env:pro16MHzatmega328]
 platform = atmelavr
