Update version for a small fix.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=DYPlayer
-version=4.0.0
+version=4.0.1
 author=Chris Snijder
 maintainer=Chris Snijder
 sentence=Abstracton for DY-XXXX mp3 player modules over UART.
-paragraph=Most features abstracted to class easy to use methods.
+paragraph=All features abstracted to class easy to use methods.
 category=Device Control
 url=https://github.com/SnijderC/Dysv17f
 architectures=*
